<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String com o nome do Aplicativo -->
    <string name="app_name">Experimento</string>

    <!-- Strings comuns -->
    <string name="progress_aguarde">Aguarde&#8230;</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="msg_campo_obrigatorio">Campo obrigatório!</string>
    <string name="msg_erro_rest">Ocorreu um erro inesperado.</string>

    <!-- Strings fluxos -->
    <string name="action_incluir">Incluir</string>
    <string name="action_editar">Editar</string>
    <string name="action_excluir">Excluir</string>
    <string name="action_refresh">Refresh</string>
    
    <!-- Strings titulo de msg -->
    <string name="tlt_exclusao">Exclusão</string>
    
    <!-- Strings botões -->
    <string name="btn_salvar">Salvar</string>
    
    <!-- Strings hint -->
    <string name="hint_titulo">Título</string>
    <string name="hint_url">URL do Video</string>
    <string name="hint_rodape">Nota do Rodapé</string>
    <string name="hint_pagina">Página</string>

    <!-- Strings msg de sucesso -->
    <string name="msg_MS01">Conteúdo Educacional criado com sucesso.</string>
    <string name="msg_MS02">Conteúdo Educacional alterado com sucesso.</string>
    <string name="msg_MS03">Conteúdo Educacional descartado com sucesso.</string>

    <!-- Strings msg de erro -->
    <string name="msg_ME01">Este campo é obrigatório</string>
    <string name="msg_ME02">Esta URL é inválida</string>

    <!-- Strings msg de confirmação -->
    <string name="msg_MC01">Este Conteúdo Educacional será descartado. Deseja confirmar?</string>
    <string name="title_activity_activity_item">Activity_item</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_videos_item">Videos_item</string>

</resources>
